@@ -1,15 +1,15 @@
-static const char id[] = "@(#)sccs.sl	1.18 (gritter) 2/2/07";
+static const char id[] = "@(#)sccs.sl	1.19 (gritter) 2/13/07";
 /* SLIST */
 /*
 admin.c: * Sccsid @(#)admin.c	1.4 (gritter) 01/21/07
 comb.c: * Sccsid @(#)comb.c	1.4 (gritter) 01/21/07
-delta.c: * Sccsid @(#)delta.c	1.6 (gritter) 01/21/07
-get.c: * Sccsid @(#)get.c	1.7 (gritter) 2/2/07
+delta.c: * Sccsid @(#)delta.c	1.7 (gritter) 2/13/07
+get.c: * Sccsid @(#)get.c	1.8 (gritter) 2/13/07
 help.c: * Sccsid @(#)help.c	1.5 (gritter) 12/21/06
 prs.c: * Sccsid @(#)prs.c	1.6 (gritter) 01/21/07
 prt.c: * Sccsid @(#)prt.c	1.4 (gritter) 01/21/07
 rmchg.c: * Sccsid @(#)rmchg.c	1.5 (gritter) 01/21/07
-sccs.c: * Sccsid @(#)sccs.c	1.6 (gritter) 01/21/07
+sccs.c: * Sccsid @(#)sccs.c	1.8 (gritter) 2/13/07
 unget.c: * Sccsid @(#)unget.c	1.6 (gritter) 01/21/07
 val.c: * Sccsid @(#)val.c	1.5 (gritter) 01/21/07
 vc.c: * Sccsid @(#)vc.c	1.3 (gritter) 12/20/06
